--- a/kaguya/sass/_page-footer.scss
+++ b/kaguya/sass/_page-footer.scss
@@ -11,11 +11,16 @@
   }
 
   &__wrapper {
-    padding: 120px 224px 39px;
+    padding: 120px 0 39px;
+    margin: auto;
+    width: 82.5%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-end;
+    @include mixin.sp {
+      justify-content: center;
+    }
   }
 
   &__logo {
