--- a/kaguya/sass/_page-header.scss
+++ b/kaguya/sass/_page-header.scss
@@ -14,10 +14,13 @@
   }
 
   &__wrapper {
-    padding: 16px 96px;
+    padding: 16px 0;
+    margin: auto;
+    width: 92.5%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: flex-end;
     @include mixin.sp {
       justify-content: center;
     }
