--- a/kaguya/assets/css/style.css
+++ b/kaguya/assets/css/style.css
@@ -103,42 +103,75 @@
   width: 100%;
 }
 .concept__main-visual {
-  background: url("../img/home_top.png") no-repeat center center;
+  background: url("../img/home_top@2x.png") no-repeat center center;
+  background-size: cover;
+  object-fit: cover;
   height: 744px;
+}
+@media screen and (max-width: 1280px) {
+  .concept__main-visual {
+    height: 800px;
+  }
 }
 .concept__main-visual--wrapper {
   width: fit-content;
-  background-color: #FFF;
-  opacity: 0.8;
   position: relative;
   top: 40%;
-  padding: 32px;
 }
 .concept__main-visual--header {
   display: inline;
-  padding-left: 56px;
   text-align: left;
   font-size: 53px;
   line-height: 73px;
   font-weight: normal;
   font-family: Noto Sans;
   letter-spacing: 2.65px;
-  color: #918F89;
+  color: #918f89;
+}
+@media screen and (max-width: 1280px) {
+  .concept__main-visual--header {
+    font-size: 39px;
+    line-height: 37px;
+    letter-spacing: 1.95px;
+  }
+}
+.concept__main-visual--br {
+  display: inline-block;
+  background-color: #fff;
+  opacity: 0.8;
+  padding: 16px;
+  margin-bottom: 16px;
 }
 .concept__detail-wrapper {
   display: flex;
   flex-direction: row;
-  align-items: flex-end;
-  padding: 80px 60px;
+  padding: 80px 0px;
+  margin: auto;
+  width: 95%;
   height: 720px;
+}
+@media screen and (max-width: 1280px) {
+  .concept__detail-wrapper {
+    flex-direction: column-reverse;
+  }
 }
 .concept .concept__detail--text, .concept .concept__detail--header, .concept .concept__detail {
   text-align: left;
-  color: #3B3B3B;
+  color: #3b3b3b;
   font-weight: normal;
+}
+@media screen and (max-width: 1280px) {
+  .concept .concept__detail--text, .concept .concept__detail--header, .concept .concept__detail {
+    text-align: center;
+  }
 }
 .concept__detail {
   padding: 240px 28px 90px;
+}
+@media screen and (max-width: 1280px) {
+  .concept__detail {
+    padding: 0 8.5px 24px;
+  }
 }
 .concept__detail--header {
   font-size: 25px;
@@ -147,17 +180,42 @@
   letter-spacing: 2.5px;
   padding-bottom: 70px;
 }
+@media screen and (max-width: 1280px) {
+  .concept__detail--header {
+    font-size: 21px;
+    line-height: 53px;
+    letter-spacing: 2.1px;
+    padding: 0 0 32px;
+  }
+}
 .concept__detail--text {
   font-size: 12px;
   line-height: 30px;
   font-family: Noto Sans;
   letter-spacing: 0.36px;
 }
+.concept__detail--sp-br {
+  display: none;
+}
+@media screen and (max-width: 1280px) {
+  .concept__detail--sp-br {
+    display: inline;
+  }
+}
 .concept__sub-visual {
-  background: url("../img/concept.png") no-repeat left center;
+  background: url("../img/concept.png") no-repeat center center;
+  background-size: cover;
+  object-fit: cover;
   margin: 0 28px;
   padding-left: 50%;
   height: 560px;
+}
+@media screen and (max-width: 1280px) {
+  .concept__sub-visual {
+    background-size: contain;
+    height: 264px;
+    margin: 0 24px;
+  }
 }
 
 .top {
@@ -344,12 +402,6 @@
   font-size: 17px;
   width: 100%;
   text-align: center;
-}
-
-@media (max-width: 1280px) {
-  .br {
-    display: inline-block;
-  }
 }
 
 /*# sourceMappingURL=style.css.map */
