--- a/kaguya/sass/_section.scss
+++ b/kaguya/sass/_section.scss
@@ -1,7 +1,9 @@
+@use 'mixin';
+
 .section {
   color: #3b3b3b;
   text-align: center;
-  padding: 160px 0 80px;
+  padding: 0 24px 240px;
 
   &__header {
     font-size: 24px;
@@ -10,6 +12,9 @@
     font-weight: normal;
     letter-spacing: 2.4px;
     padding-bottom: 48px;
+    @include mixin.sp {
+      padding-bottom: 32px;
+    }
   }
 
   &__text {
@@ -37,6 +42,9 @@
       top: -2px;
       left: 6px;
     }
+    @include mixin.sp {
+      opacity: 1;
+    }
   }
 
   &__btn {
@@ -49,5 +57,8 @@
     letter-spacing: 1.8px;
     color: #707070;
     padding: 18px 64px;
+    @include mixin.sp {
+      padding: 18px 32px;
+    }
   }
 }
