[fix]CONTACT画面レスポンシブ対応微調整

--- a/kaguya/sass/_top.scss
+++ b/kaguya/sass/_top.scss
@@ -33,6 +33,7 @@ $img-path: "../img";
     &--contact {
       @extend %__catch;
       background: url($img-path + "/contact_top@2x.png") no-repeat center center;
+      background-position: 85%;
     }
   }
 
